# JobScribe

emailAgent/: README.md  main.py  pyproject.toml  requirements.txt
emailAgent/app/: main.py
emailAgent/app/core/: chroma_db.py  config.py  database.py  llm.py  middleware.py
emailAgent/app/models/: jobUrl.py  resumeModels.py  user.py
emailAgent/app/routes/: email.py  main.py  resume.py  user.py
emailAgent/app/services/: auth.py  email.py  resume.py
emailAgent/app/utils/: extract_text_pdf.py  prompts.py  scraper.py
emailAgent/app/vector_db/: resume.py
emailAgent/chroma_db/: chroma.sqlite3
frontend/job-scribe-frontend/: .env.example  README.md  package-lock.json  package.json
frontend/job-scribe-frontend/src/: App.tsx
frontend/job-scribe-frontend/src/components/: Dashboard.tsx  EmailGenerator.tsx  Login.tsx  ProtectedRoute.tsx  Register.tsx  ResumeUpload.tsx
frontend/job-scribe-frontend/src/contexts/: AuthContext.tsx
frontend/job-scribe-frontend/src/services/: api.ts
frontend/job-scribe-frontend/src/theme/: theme.ts
frontend/job-scribe-frontend/src/types/: index.ts
